<resources>
    <string name="app_name">Co-HELP</string>
    <string name="open">Open</string>
    <string name="close">Close</string>
    <string name="messagewithlink"><a href="https://www.google.com/">Khandelwal Nursing Home</a></string>
    <string name="messagewithlink2"><a href="https://www.google.com/">Sandeep Hospital</a></string>
    <string name="messagewithlink3"><a href="https://www.google.com/">Pushpanjali Hospital</a></string>
    <string name="morecenters"><a href="https://www.google.com/">Click here to see more centers in your city.</a></string>
    <string name="cases"><a href="https://www.google.com/">Click here to see more statistics of your city.</a></string>
    <string name="messagewithlink4"><a href="https://www.google.com/">Samparn Blood Bank</a></string>
    <string name="messagewithlink5"><a href="https://www.google.com/">Sanjeevni Blood Bank</a></string>
    <string name="messagewithlink6"><a href="https://www.google.com/">District Hospital Blood Bank</a></string>
    <string name="enter_name">Enter Name</string>
    <string name="address">Address</string>
    <string name="enter_email">Enter Email</string>
    <string name="enter_password">Enter Password</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="bloodGrp">Blood Group</string>
    <string name="Age">Age</string>
    <string name="State">State</string>
    <string name="loginPage"><b><u>Click here if already registered.</u></b></string>
    <string name="registerPage"><b><u>Click here if you have not registered.</u></b></string>
    <string name="registerSlot"><a href="https://www.cowin.gov.in/home"><u>Click here to register your slot.</u></a></string>

    <string-array name="BloodGroups">
        <item>A+</item>
        <item>A-</item>
        <item>B+</item>
        <item>B-</item>
        <item>O+</item>
        <item>O-</item>
        <item>AB+</item>
        <item>AB-</item>

    </string-array>

    <string-array name="gender">

        <item>Male</item>
        <item>Female</item>
    </string-array>

</resources>