<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_gravity="center_horizontal"
    android:orientation="vertical"
    tools:context=".blood"
    android:background="#D1C2E6">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Blood Plasma Availability Near You"
        android:textStyle="bold"
        android:textSize="38sp"
        android:gravity="center_horizontal"
        android:layout_marginTop="20dp"
        android:textColor="@color/black">


    </TextView>
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"

        >


        <EditText
            android:id="@+id/Age"
            android:layout_width="193dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:drawableStart="@drawable/address"
            android:drawableLeft="@drawable/address"
            android:drawablePadding="10dp"
            android:ems="10"
            android:hint="City"
            android:inputType="textEmailAddress"
            android:padding="18dp">

        </EditText>

        <EditText
            android:id="@+id/BloodGrp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:drawableStart="@drawable/address"
            android:drawableLeft="@drawable/address"
            android:drawablePadding="10dp"
            android:ems="10"
            android:hint="Blood Group"
            android:inputType="textEmailAddress"
            android:padding="18dp">

        </EditText>

</LinearLayout>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/messagewithlink4"
        android:layout_marginTop="40dp"
        android:textSize="20sp"
        android:layout_gravity="left"
        android:layout_marginLeft="35dp"
        android:textColorLink="@color/black"
        />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="29dp"
        android:layout_marginRight="20dp"
        android:text="3/27, Mahatma Gandhi Rd, khandelwal Colony, Pratap Pura, Civil Lines, Agra, Uttar Pradesh 282001"
        >

    </TextView>


    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/messagewithlink5"
        android:layout_marginTop="40dp"
        android:textSize="20sp"
        android:layout_gravity="left"
        android:layout_marginLeft="35dp"
        android:textColorLink="@color/black"
        />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginRight="20dp"
        android:layout_marginLeft="29dp"
        android:text="65, M.G Rd 2, Saket Colony, Shahganj, Agra, Uttar Pradesh 282010"
        >

    </TextView>


    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/messagewithlink6"
        android:layout_marginTop="40dp"
        android:textSize="20sp"
        android:layout_gravity="left"
        android:layout_marginLeft="35dp"
        android:textColorLink="@color/black"
        />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="29dp"
        android:layout_marginRight="20dp"
        android:text="Pushpanjali Palace, Delhi Gate, Agra, Uttar Pradesh 282002"
        >

    </TextView>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/morecenters"
        android:layout_marginTop="30sp"
        android:layout_gravity="center_horizontal"
        android:textColorLink="@color/purple_700"
        >

    </TextView>



</LinearLayout>